--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/Hero.img.jpg") top right no-repeat;
+  background: url("../img/Hero.img.jpeg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
